if only obj change -> history reset to 1
--- 10 jan full ---
Levelpscost different implementation.
--- 11 jan full ---
Turn off levelpscost.
if only obj change -> history reset to 3
turn off non performing heuristics after index 15
print and record presolve and cuts stats
--- 14 jan full ---
turn off non performing heuristics after index 25
turn off non performing presolve after index 15
turn off non performing cuts after index 25
--- 15 jan full ---
Use mt19937 for random number generation in param tuning.
--- 15 jan full 2---
Recompile scip without levelpscost added code.
--- 16 jan full ---
switch to pscost after index 4
--- 16 jan full 2---
(if only lhs/rhs has changed) switch to pscost after index 4
Explore without randomness (explore count 8)
Tune cuts after index 4
--- 17 jan full ---
parameters: If final scores are within standard dev, pick randomly
if only obj change -> history reset to 1
--- 17 jan full 2---
parameters: If final scores are within standard dev/10, pick randomly
--- 19 jan full ---
No special treatment for history reset for obj only change
--- 19 jan private only full ---
Max restarts as parameter 0,1
--- 22 jan full ---
Use full strong branching for first instance
--- 23 jan full ---
Instead of full strong branching, increase efforts on reliability branching
Update restart 1 score only if actually restarted.
--- 24 jan full ---
revert to 23 jan full
max restart is again 0.
scip v 8.0.3
--- 25 jan full ---
back to scip v 8.0.2
--- 26 jan base full ---
Conditional compilation in mipcomp.sh
completesol heuristic nodesofs to 5000 (default 500)
completesol heuristic solutions to -1 (default 5)
Provide 9 prev solutions.
--- 30 jan full ---
Reduce efforts for completesol heuristic if obj only change.
Reuse best 10 cuts.
--- 31 jan full ---
Revert cut reuse change.
O3 compilation
--- 10 feb full ---
revert O3 compilation
--- 11 feb full ---
Code cleanup.
Max restart tuning after index 20.

TODOs
Revert cuts change



