@@ -124,6 +124,10 @@ revert O3 compilation
 --- 11 feb full ---
 Code cleanup.
 Max restart tuning after index 20.
+--- 12 feb full ---
+revert max restart tuning
+Turn off heuristics with time per best soln / timeout > 0.2
+--- 13 feb full ---
 
 TODOs
 Revert cuts change
